revised IA for subway

--- a/payroll/guidance/after.html
+++ b/payroll/guidance/after.html
@@ -68,11 +68,11 @@
       <a href="overview.html#gc-document-nav" class="visible-xs visible-sm">Get ready to determine the employment status</a></li>
      
 
-<li><a href="factors.html" class="hidden-xs hidden-sm">Determine if the worker is an employee or self-employed</a>
-      <a href="factors.html#gc-document-nav" class="visible-xs visible-sm">Determine if the worker is an employee or self-employed</a></li>
+<li><a href="factors.html" class="hidden-xs hidden-sm">Determine the employment status</a>
+      <a href="factors.html#gc-document-nav" class="visible-xs visible-sm">Determine the employment status</a></li>
 
-<li><a href="factors-psb.html" class="hidden-xs hidden-sm">Determine if the worker is an incorporated employee </a>
-      <a href="factors-psb.html#gc-document-nav" class="visible-xs visible-sm">Determine if the worker is an incorporated employee</a></li>
+
+      
 
 <li><a href="after.html" class="active" aria-current="page">Understand the tax obligations</a>
 
