--- a/payroll/guidance/tax-obligations-self.html
+++ b/payroll/guidance/tax-obligations-self.html
@@ -70,11 +70,11 @@
       <a href="overview.html#gc-document-nav" class="visible-xs visible-sm">Overview</a></li>
      
 
-<li><a href="factors.html" class="hidden-xs hidden-sm">Determine if the worker is an employee or self-employed</a>
-      <a href="factors.html#gc-document-nav" class="visible-xs visible-sm">Determine if the worker is an employee or self-employed</a></li>
+<li><a href="factors.html" class="hidden-xs hidden-sm">Determine the employment status</a>
+      <a href="factors.html#gc-document-nav" class="visible-xs visible-sm">Determine the employment status</a></li>
 
-<li><a href="factors-psb.html" class="hidden-xs hidden-sm">Determine if the worker is an incorporated employee </a>
-      <a href="factors-psb.html#gc-document-nav" class="visible-xs visible-sm">Determine if the worker is an incorporated employee</a></li>
+
+      
 
 <li><a href="after.html" class="hidden-xs hidden-sm">Understand the tax obligations</a>
       <a href="after.html#gc-document-nav" class="visible-xs visible-sm">Understand the tax obligations</a>
@@ -106,7 +106,7 @@
 
 <div data-ajax-replace="/cra-arc/payroll/guidance/after.html#ajax-info1"></div>
 
-<p><i class="fas fa-user-tag fa-2xl text-primary"></i> If you are not sure if the worker is self-employed, continue to: <a href="factors.html">Determine if the worker is an employee or self-employed</a></p>
+<p><i class="fas fa-user-tag fa-2xl text-primary"></i> If you are not sure if the worker is self-employed, continue to: <a href="factors.html">Determine the employment status</a></p>
 
 <p>Understanding the tax obligations based on the individual:</p>
 <ul>
