--- a/payroll/guidance/court-filter-500.html
+++ b/payroll/guidance/court-filter-500.html
@@ -8,7 +8,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>Court decisions or technical interpretations for tax purposes to determine if the worker is an employee or self-employed - Calculate payroll deductions and contributions - Canada.ca</title>
+         <title>Court decisions or technical interpretations for tax purposes to Determine the employment status - Calculate payroll deductions and contributions - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -52,7 +52,7 @@
                 href: "index.html"
              
                 },{
-                title: "Determine if the worker is an employee or self-employed",
+                title: "Determine the employment status",
                 href: "https://test.canada.ca/cra-arc/payroll/guidance/factors.html"
               }
               ],
@@ -69,14 +69,14 @@
                      <a href="overview.html#gc-document-nav" class="visible-xs visible-sm">Get ready to determine the employment status</a>
                   </li>
                   <li>
-                     <a href="factors.html" class="hidden-xs hidden-sm">Determine if the worker is an employee or self-employed</a> <a href="factors.html#gc-document-nav" class="visible-xs visible-sm">Determine if the worker is an employee or self-employed</a>
+                     <a href="factors.html" class="hidden-xs hidden-sm">Determine the employment status</a> <a href="factors.html#gc-document-nav" class="visible-xs visible-sm">Determine the employment status</a>
                      <ul class="noline">
                         <li><a href="factors-federal.html" class="hidden-xs hidden-sm">Contract formed in a province or territory not in Quebec</a> <a href="factors-federal.html#gc-document-nav" class="visible-xs visible-sm">Contract formed in a province or territory not in Quebec</a></li>
                         <li><a href="factors-quebec.html" class="hidden-xs hidden-sm">Contract formed in the province of Quebec</a> <a href="factors-quebec.html#gc-document-nav" class="visible-xs visible-sm">Contract formed the a province of Quebec</a></li>
                         <li> <a href="court-table.html" class="active" aria-current="page">Court decisions or technical interpretations </a></li>
                      </ul>
                   </li>
-                  <li><a href="factors-psb.html" class="hidden-xs hidden-sm">Determine if the worker is an incorporated employee </a>
+                  
                      <a href="factors-psb.html#gc-document-nav" class="visible-xs visible-sm">Determine if the worker is an incorporated employee</a>
                   </li>
                   <li><a href="after.html" class="hidden-xs hidden-sm">Understand the tax obligations</a>
@@ -85,7 +85,7 @@
                </ul>
             </nav>
             <h1 property="name" id="wb-cont" class="gc-thickline">Court decisions or technical interpretations </h1>
-            <p>To help you in analysis to determine if the worker is an employee or self-employed, you may want to search court decisions or technical interpretations for tax purposes.</p>
+            <p>To help you in analysis to Determine the employment status, you may want to search court decisions or technical interpretations for tax purposes.</p>
 			
 			
 			
