--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -51,7 +51,7 @@
                 title: "Determine the employment status: Employee, self-employed or incorporated employee",
                 href: "https://test.canada.ca/cra-arc/payroll/guidance/index.html"
               },{
-                title: "Determine if the worker is an employee or self-employed",
+                title: "Determine the employment status",
                 href: "https://test.canada.ca/cra-arc/payroll/guidance/factors.html"
               }
                            ],
@@ -66,15 +66,16 @@
 
    <ul>
       <li><a href="overview.html" class="hidden-xs hidden-sm">Get ready to determine the employment status</a> <a href="overview.html#gc-document-nav" class="visible-xs visible-sm">Get ready to determine the employment status</a></li>
-      <li><a href="factors.html" class="hidden-xs hidden-sm">Determine if the worker is an employee or self-employed</a> <a href="factors.html#gc-document-nav" class="visible-xs visible-sm">Determine if the worker is an employee or self-employed</a>
+      <li><a href="factors.html" class="hidden-xs hidden-sm">Determine the employment status</a> <a href="factors.html#gc-document-nav" class="visible-xs visible-sm">Determine the employment status</a>
         <ul class="noline">
           <li> <a href="factors-federal.html" class="active" aria-current="page">Contract formed in a province or territory not in Quebec</a></li>
+
           <li><a href="factors-quebec.html" class="hidden-xs hidden-sm">Contract formed in the province of Quebec</a> <a href="factors-quebec.html#gc-document-nav" class="visible-xs visible-sm">Contract formed the a province of Quebec</a></li>
-		 
+		 <li><a href="factors-psb.html" class="hidden-xs hidden-sm">Determine if the worker is an incorporated employee</a> <a href="factors-psb.html#gc-document-nav" class="visible-xs visible-sm">Determine if the worker is an incorporated employee</a></li>
 		    
         </ul>
       </li>
-      <li><a href="factors-psb.html" class="hidden-xs hidden-sm">Determine if the worker is an incorporated employee </a> <a href="factors-psb.html#gc-document-nav" class="visible-xs visible-sm">Determine if the worker is an incorporated employee</a></li>
+       
       <li><a href="after.html" class="hidden-xs hidden-sm">Understand the tax obligations</a> <a href="after.html#gc-document-nav" class="visible-xs visible-sm"> Understand the tax obligations </a></li>
     </ul>
   </nav>
@@ -2041,6 +2042,14 @@
       </ul>
     </div>
   </section>
+  
+  
+  <nav class="gc-subway-pagination">
+		<h2 class="wb-inv">Document navigation</h2>
+		<ul class="pager">
+			<li class="previous"><a href="factors.html" rel="prev"><span class="wb-inv">Previous: </span>Determine the employment status</a></li>
+		</ul>
+	</nav>
   <div id="def-preFooter"></div>
   <!-- Write closure template --> 
   <script type="text/javascript">
