--- a/payroll/guidance/factors-psb.html
+++ b/payroll/guidance/factors-psb.html
@@ -68,8 +68,12 @@
  <li><a href="overview.html" class="hidden-xs hidden-sm">Get ready to determine the employment status</a>
       <a href="overview.html#gc-document-nav" class="visible-xs visible-sm">Get ready to determine the employment status</a></li>
 
-<li><a href="factors.html" class="hidden-xs hidden-sm">Determine if the worker is an employee or self-employed</a>
-      <a href="factors.html#gc-document-nav" class="visible-xs visible-sm">Determine if the worker is an employee or self-employed</a>
+<li><a href="factors.html" class="hidden-xs hidden-sm">Determine the employment status</a>
+<li><a href="factors-federal.html" class="hidden-xs hidden-sm">Contract formed in a province or territory not in Quebec</a>
+      <a href="factors-federal.html#gc-document-nav" class="visible-xs visible-sm">Contract formed in a province or territory not in Quebec</a></li>
+  
+  <li><a href="factors-quebec.html" class="hidden-xs hidden-sm">Contract formed in the province of Quebec</a> <a href="factors-quebec.html#gc-document-nav" class="visible-xs visible-sm">Contract formed the a province of Quebec</a></li>
+      <a href="factors.html#gc-document-nav" class="visible-xs visible-sm">Determine the employment status</a>
 	</li>
 
  <li>	 <a href="factors-psb.html" class="active" aria-current="page">Determine if the worker is an incorporated employee</a></li>
@@ -222,7 +226,7 @@
                You are not sure if the worker is a incorporated employee</h3>
 <hr>
 	
-<p>To determine if the worker is considered an employee, continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/factors.html">Determine if the worker is an employee or self-employed</a>.</p>
+<p>To determine if the worker is considered an employee, continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/factors.html">Determine the employment status</a>.</p>
 <details><summary>Why do you need to determine if the worker is considered an employee</summary>
 <p>A corporation is a PSB if the incorporated employee that provides services to the person on behalf of the corporation <strong>could reasonably be considered an employee of that person if the corporation did not exist</strong>.</p>
 <p>An <strong>employee-employer relationship </strong>between the incorporated employee and the person that received the services must be shown. Both are therefore bound by a contract of employment instead of a contract of enterprise. </p>
@@ -238,7 +242,7 @@
 <p>The worker is <strong>not</strong> an incorporated employee. This also means that the worker is <strong>not</strong> operating a personal service business (PSB).</p>
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"> If you are not sure about the worker classification, continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/factors.html">Determine if the worker is an employee or self-employed</a> 
+<li class="cnjnctn-col"> If you are not sure about the worker classification, continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/factors.html">Determine the employment status</a> 
 </li>
 
 <li class="cnjnctn-col">
@@ -466,10 +470,13 @@
 <nav class="mrgn-bttm-lg mrgn-tp-lg">
   <h3 class="wb-inv">Document navigation</h3>
   <ul class="pager">
+  <li class="previous"><a href="factors.html" rel="prev"><span class="wb-inv">Previous: </span>Determine the employment status</a></li>
     <li class="next"><a href="after.html" rel="next"><span class="wb-inv">Next: </span>Understand the tax obligations</a></li>
   </ul>
 </nav>
+  
 
+	</nav>
 <section id="psb_2" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">What is considered a personal services business (PSB)</h2>
 	</header>	<div class="modal-body">		
 	<div data-ajax-replace="#ajax-psb"></div>
