--- a/payroll/guidance/factors.html
+++ b/payroll/guidance/factors.html
@@ -13,18 +13,15 @@
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
          <!-- Meta data-->
-       <!-- Load closure template scripts -->
-     <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_43/cdts/compiled/soyutils.js"></script>
-         <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_43/cdts/compiled/wet-en.js"></script>
+<!-- Load closure template scripts --> 
+ <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_1_0/cdts/compiled/soyutils.js"></script>
+         <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_1_0/cdts/compiled/wet-en.js"></script>
          <link href="https://test.canada.ca/covid-19-guidance/proto/css/alpha-beta-banner.css" rel="stylesheet">
-         <link href="https://cra-arc.gc.ca/wet-boew/css/custom/steps.css" rel="stylesheet">
-		 <link href="https://www.canada.ca/etc/designs/canada/wet-boew/m%C3%A9li-m%C3%A9lo/2023-10-mount-revelstoke.min.css" rel="stylesheet">
-		     <link href="https://cra-arc.gc.ca/wet-boew/css/custom/noline-css.css" rel="stylesheet">
-         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha256-mUZM63G8m73Mcidfrv5E+Y61y7a12O5mW4ezU3bxqW4=" crossorigin="anonymous"/>
-           
-         <link href="https://test.canada.ca/covid-19-guidance/proto/css/alpha-beta-banner.css" rel="stylesheet">
-         <link href="https://cra-arc.gc.ca/wet-boew/css/custom/steps.css" rel="stylesheet">
-               <!-- Write closure template -->
+         <link href="https://www.canada.ca/etc/designs/canada/wet-boew/m%C3%A9li-m%C3%A9lo/2023-10-mount-revelstoke.min.css" rel="stylesheet">
+		 <link href="https://www.canada.ca/etc/designs/canada/wet-boew/css/theme.min.css" rel="stylesheet">
+         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha256-mUZM63G8m73Mcidfrv5E+Y61y7a12O5mW4ezU3bxqW4=" crossorigin="anonymous">
+
+<!-- Write closure template --> 
          <script type="text/javascript">
             document.write(wet.builder.refTop({
             }));
@@ -72,14 +69,14 @@
  <li><a href="overview.html" class="hidden-xs hidden-sm">Get ready to determine the employment status</a>
       <a href="overview.html#gc-document-nav" class="visible-xs visible-sm">Get ready to determine the employment status</a></li>
 
- <li>	 <a href="factors.html" class="active" aria-current="page">Determine if the worker is an employee or self-employed</a>	
+ <li>	 <a href="factors.html" class="active" aria-current="page">Determine the employment status</a>	
 
 
  </li>
 
 
-<li><a href="factors-psb.html" class="hidden-xs hidden-sm">Determine if the worker is an incorporated employee </a>
-      <a href="factors-psb.html#gc-document-nav" class="visible-xs visible-sm">Determine if the worker is an incorporated employee</a></li>
+
+      
 
 
 <li><a href="after.html" class="hidden-xs hidden-sm">Understand the tax obligations</a>
@@ -90,19 +87,20 @@
 </nav>
 
 
-<h1 property="name" id="wb-cont" class="gc-thickline">Determine if the worker is an employee or self-employed</h1>
+<h1 property="name" id="wb-cont" class="gc-thickline">Determine the employment status</h1>
  
 <div class="alert alert-info">
 <p>Content has been updated for <strong>clarity, completeness and plain language</strong>, including <strong>additional examples and legislative references</strong>.</p>
 </div>
-
+<ol class="lst-stps">
+<li><h3>Determine if the worked is and employee or self-employed</h3>
 <p>You need to consider multiple factors to determine if the worker is an employee or is self-employed.  </p>
 
  <p>Unless the <a href="#ajax-contract" aria-controls="ajax-contract" class="overlay-lnk" role="button">valid contract <span class="far fa-question-circle"></span></a> states differently, the factors are different if the contract is formed:</p>
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col">
-<h2 class="h4"> <a href="factors-federal.html">Contract formed in a province or territory not in Quebec</a></h2>
+<h4> <a href="factors-federal.html">Contract formed in a province or territory not in Quebec</a></h4>
 
 <p >Applies to employment performed in and outside Canada, where employment is in: </p><ul class="list-inline mrgn-bttm-md">
 
@@ -122,7 +120,7 @@
 </ul>
 </li>
 <li class="cnjnctn-col-60">
-<h2 class="h4"><a href="factors-quebec.html">Contract formed in the province of Quebec</a></h2>
+<h4><a href="factors-quebec.html">Contract formed in the province of Quebec</a></h4>
 <p>Applies to employment performed in and outside Canada, where employment is in:</p><ul class="list-inline mrgn-bttm-md">
 
 <li class="mrgn-rght-md"><img src="../images/flag-qc.png" class="mrgn-rght-sm" alt=""> QC</li>
@@ -132,9 +130,16 @@
 
 </li>
 </ul>
-
-<h2>Past court decisions</h2>
+<h4>Past court decisions</h4>
 <p>You can search for <a href="#ajax-court" aria-controls="ajax-court" class="overlay-lnk" role="button">court decisions <span class="far fa-question-circle"></span></a> to help determine whether the worker is an employee or self-employed for tax purposes.</p>
+</li>
+<li><h3>If the worker is an employee</h3>
+<h4><a href="factors-psb.html">Determine if the worker is an incorporated employee</a></h4>
+
+  <p>Review the factors to determine if the worker is an incorporated employee, as a special rules may apply to their corporation for income tax purposes if an individual performs the services on behalf of their own corporation, this may be considered a personal services business (PSB) </p>
+  </li>
+  </ol>
+
 
 <section id="ajax-contract" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Validity of the contract</h2>
 	</header>	<div class="modal-body">	
