--- a/payroll/guidance/index.html
+++ b/payroll/guidance/index.html
@@ -77,11 +77,10 @@
   <dt>   <a href="overview.html">Get ready to determine the employment status</a>  </dt>
   <dd>Information on the type of employment status for tax purposes, what is considered a valid contract, including what to do if you are not sure about the worker classification </dd>
 
-  <dt>    <a href="factors.html">Determine if the worker is an employee or self-employed</a>  </dt>
+  <dt>    <a href="factors.html">Determine the employment status</a>  </dt>
   <dd>Information on the factors to consider depending on where the contract was formed. The factors are different if the contract is formed in the province of Quebec or in any other province or territory (unless the contract states differently).  </dd>
 
-<dt>    <a href="factors-psb.html">Determine if the worker is an incorporated employee</a>  </dt>
-  <dd>Information on the factors to consider to determine if the worker is an incorporated employee, special rules may apply to their corporation for income tax purposes if an individual performs the services on behalf of their own corporation, this may be considered a personal services business (PSB) </dd>
+
 
 
 <dt>    <a href="after.html">Understand the tax obligations</a>  </dt>
