--- a/payroll/guidance/overview.html
+++ b/payroll/guidance/overview.html
@@ -72,11 +72,11 @@
  <li>	 <a href="overview.html" class="active" aria-current="page">Get ready to determine the employment status</a>	</li>
      
 
-<li><a href="factors.html" class="hidden-xs hidden-sm">Determine if the worker is an employee or self-employed</a>
-      <a href="factors.html#gc-document-nav" class="visible-xs visible-sm">Determine if the worker is an employee or self-employed</a></li>
+<li><a href="factors.html" class="hidden-xs hidden-sm">Determine the employment status</a>
+      <a href="factors.html#gc-document-nav" class="visible-xs visible-sm">Determine the employment status</a></li>
 
-<li><a href="factors-psb.html" class="hidden-xs hidden-sm">Determine if the worker is an incorporated employee </a>
-      <a href="factors-psb.html#gc-document-nav" class="visible-xs visible-sm">Determine if the worker is an incorporated employee</a></li>
+
+      
 
 <li><a href="after.html" class="hidden-xs hidden-sm">Understand the tax obligations</a>
       <a href="after.html#gc-document-nav" class="visible-xs visible-sm"> Understand the tax obligations </a></li>
@@ -271,7 +271,7 @@
 <nav class="mrgn-bttm-lg mrgn-tp-lg">
   <h3 class="wb-inv">Document navigation</h3>
   <ul class="pager">
-    <li class="next"><a href="factors.html" rel="next"><span class="wb-inv">Next: </span>Determine if the worker is an employee or self-employed</a></li>
+    <li class="next"><a href="factors.html" rel="next"><span class="wb-inv">Next: </span>Determine the employment status</a></li>
   </ul>
 </nav>
 
