--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -205,7 +205,7 @@
         </details>
       </div>
     </li>
-    <li class="mrgn-lft-md"><span class="fa-li fa-2x"><span class="fas fa-clipboard-list"></span></span>
+    <li class="mrgn-lft-md mrgn-tp-lg"><span class="fa-li fa-2x"><span class="fas fa-clipboard-list"></span></span>
       <h4 id="factor2">Control over the work – Factor 2</h4>
       <p>Control is the ability, authority, or right of a payer to exercise control over a worker concerning the manner in which the work is done and what work will be done. Consider the degree of control held by the payer or the degree of independence held by the worker. The actual degree of control will vary with the type of work and the skills of the worker. </p>
       <section class="panel panel-default">
@@ -918,7 +918,7 @@
         </div>
       </section>
     </li>
-    <li class="mrgn-lft-md"><span class="fa-li fa-2x"><span class="fas fa-tools"></span></span>
+    <li class="mrgn-lft-md mrgn-tp-lg"><span class="fa-li fa-2x"><span class="fas fa-tools"></span></span>
       <h4 id="factor3">Ownership of the tools and equipment – Factor 3</h4>
       <p id="3">Consider if the worker owns and provides tools and equipment to accomplish the work. Contractual control of, and responsibility for, an asset in a rental or lease situation is also considered under this factor.</p>
       <details class="mrgn-bttm-xl">
@@ -1064,7 +1064,7 @@
         </details>
       </div>
     </li>
-    <li class="mrgn-lft-md"><span class="fa-li fa-2x"><span class="fas fa-user-friends"></span></span>
+    <li class="mrgn-lft-md mrgn-tp-lg"><span class="fa-li fa-2x"><span class="fas fa-user-friends"></span></span>
       <h4 id="factor4">Subcontracting of work or hiring assistants – Factor 4</h4>
       <p>Consider if the worker can subcontract work or hire assistants. This factor can help decide a worker's business presence because subcontracting work or hiring assistants can affect their chance of profit and risk of loss.</p>
       <p class="h5" id="f4q01">Can the worker subcontract the work without the approval of the payer?</p>
@@ -1114,7 +1114,7 @@
         </details>
       </div>
     </li>
-    <li class="mrgn-lft-md"><span class="fa-li fa-2x"><span class="fas fa-hand-holding-usd fa-rotate-180"></span></span>
+    <li class="mrgn-lft-md mrgn-tp-lg"><span class="fa-li fa-2x"><span class="fas fa-hand-holding-usd fa-rotate-180"></span></span>
       <h4 id="factor5">Financial risk  taken on by the worker – Factor 5</h4>
       <p id="5">Consider the degree of financial risk taken by the worker. Consider if there are any fixed ongoing costs incurred by the worker or any expenses that are not reimbursed.</p>
       <details class="mrgn-bttm-xl">
@@ -1333,7 +1333,7 @@
         </details>
       </div>
     </li>
-    <li class="mrgn-lft-md"><span class="fa-li fa-2x"><span class="fas fa-donate"></span></span>
+    <li class="mrgn-lft-md mrgn-tp-lg"><span class="fa-li fa-2x"><span class="fas fa-donate"></span></span>
       <h4 id="factor6">Responsibility for investment and management held by the worker – Factor 6</h4>
       <p>Consider the degree of responsibility for investment and management held by the worker. A significant investment is evidence that a business relationship may exist. You should also consider if the worker is free to make business decisions that affect their profit or loss.</p>
       <p class="h5" id="f6q01">Does the worker have an operating name? </p>
@@ -1663,7 +1663,7 @@
         </details>
       </div>
     </li>
-    <li class="mrgn-lft-md"><span class="fa-li fa-2x"><span class="fas fa-money-bill-wave"></span></span>
+    <li class="mrgn-lft-md mrgn-tp-lg"><span class="fa-li fa-2x"><span class="fas fa-money-bill-wave"></span></span>
       <h4 id="factor7">Opportunity for profit – Factor 7</h4>
       <p id="7">Consider whether the worker can realize a profit or incur a loss, as this indicates that a worker controls the business aspects of services rendered and that a business relationship likely exists. To have a chance of a profit and a risk of a loss, a worker has to have potential proceeds and expenses, and one could exceed the other.</p>
       <details class="mrgn-bttm-xl">
