--- a/payroll/guidance/factors-quebec.html
+++ b/payroll/guidance/factors-quebec.html
@@ -146,7 +146,7 @@
   <p>Review the questions for each factor, and make a selection to help you gather the facts based on your situation.</p>
 
  <ul class="fa-ul">
-    <li class="mrgn-lft-md"><span class="fa-li fa-2x"><span class="fas fa-handshake"></span></span>
+    <li class="mrgn-lft-md mrgn-tp-lg"><span class="fa-li fa-2x"><span class="fas fa-handshake"></span></span>
       <h4 id="factor1">Contract of the working arrangement – Factor 1</h4>
       <p id="1_2">The CRA asks the worker and the payer what their intent was when they entered into the working arrangement. Workers and payers can choose how they set up their affairs. However, the employment status they choose must reflect their working relationship.</p>
       <p class="h5" id="f1q01">At the time of contracting, how did the parties intend to characterize the relationship? </p>
@@ -191,7 +191,7 @@
         </details>
       </div>
     </li>
-    <li class="mrgn-lft-md"><span class="fa-li fa-2x"><span class="fas fa-file-contract"></span></span>
+    <li class="mrgn-lft-md mrgn-tp-lg"><span class="fa-li fa-2x"><span class="fas fa-file-contract"></span></span>
       <h4 id="factor2">Documents to review – Factor 2</h4>
       <p id="2_2">When reviewing the worker’s and payer’s documents, the type of documents and the manner in which the information is documented can provide important clues into the relationship between the 2 parties. </p>
       <p class="h5" id="f2q01">Is the worker listed on payer’s payroll?</p>
@@ -449,7 +449,7 @@
         </details>
       </div>
     </li>
-    <li class="mrgn-lft-md"><span class="fa-li fa-2x"><span class="fas fa-chart-line"></span></span>
+    <li class="mrgn-lft-md mrgn-tp-lg"><span class="fa-li fa-2x"><span class="fas fa-chart-line"></span></span>
       <h4 id="factor3">Performance of work – Factor 3</h4>
       <p id="3_2">Control over where, when and how the work is done  need to be considered when determining the degree of control held by the payer or the degree of independence held by the worker. The actual degree of control will vary with the type of work and the skills of the worker.</p>
       <p class="h5" id="f3q01">Did the worker’s position have a job description in the payer’s internal policies?</p>
@@ -565,7 +565,7 @@
         </details>
       </div>
     </li>
-    <li class="mrgn-lft-md"><span class="fa-li fa-2x"><span class="fas fa-hand-holding-usd"></span></span>
+    <li class="mrgn-lft-md mrgn-tp-lg"><span class="fa-li fa-2x"><span class="fas fa-hand-holding-usd"></span></span>
       <h4 id="factor4">Remunerations paid to the worker – Factor 4</h4>
       <p id="4_2">In both types of arrangements (employee or self-employed) remuneration must be paid or due to the worker. However, what the remuneration was based on, the frequency of payments, whether there were deductions withheld, and how the worker requests payments can be key indicators of either a work who is an employee or one who is self-employed. </p>
       <p class="h5" id="f4q01">Were there any non-monetary benefits associated with the remuneration? </p>
@@ -730,7 +730,7 @@
         </details>
       </div>
     </li>
-    <li class="mrgn-lft-md"><span class="fa-li fa-2x"><span class="fas fa-users-cog"></span></span>
+    <li class="mrgn-lft-md mrgn-tp-lg"><span class="fa-li fa-2x"><span class="fas fa-users-cog"></span></span>
       <h4 id="factor5">Relationship of subordination with the worker – Factor 5</h4>
       <p id="5_2">Under the civil law the relationship of subordination constitutes the main element for determining a worker’s status. From the Civil Code of Quebec it is concluded that the existence of a relationship of subordination with respect to the performance of work is the main element of a contract of employment. The subordination is a legal subordination and, however minimal, suggests the existence of a contract of employment.</p>
       <p class="h5" id="f5q01">Did the worker work at a designated location?</p>
