--- a/payroll/guidance/factors-psb.html
+++ b/payroll/guidance/factors-psb.html
@@ -66,17 +66,21 @@
   <ul>
 
  <li><a href="overview.html" class="hidden-xs hidden-sm">Get ready to determine the employment status</a>
-      <a href="overview.html#gc-document-nav" class="visible-xs visible-sm">Get ready to determine the employment status</a></li>
-
-<li><a href="factors.html" class="hidden-xs hidden-sm">Determine the employment status</a>
-<li><a href="factors-federal.html" class="hidden-xs hidden-sm">Contract formed in a province or territory not in Quebec</a>
+      <a href="overview.html#gc-document-nav" class="visible-xs visible-sm">Get ready to determine the employment status</a>
+	   <li><a href="factors.html" class="hidden-xs hidden-sm">Determine the employment status</a> <a href="factors.html#gc-document-nav" class="visible-xs visible-sm">Determine the employment status</a>
+        <ul class="noline">
+          <li><a href="factors-federal.html" class="hidden-xs hidden-sm">Contract formed in a province or territory not in Quebec</a>
       <a href="factors-federal.html#gc-document-nav" class="visible-xs visible-sm">Contract formed in a province or territory not in Quebec</a></li>
-  
-  <li><a href="factors-quebec.html" class="hidden-xs hidden-sm">Contract formed in the province of Quebec</a> <a href="factors-quebec.html#gc-document-nav" class="visible-xs visible-sm">Contract formed the a province of Quebec</a></li>
-     
-	</li>
 
- <li>	 <a href="factors-psb.html" class="active" aria-current="page">Determine if the worker is an incorporated employee</a></li>
+          <li><a href="factors-quebec.html" class="hidden-xs hidden-sm">Contract formed in the province of Quebec</a> <a href="factors-quebec.html#gc-document-nav" class="visible-xs visible-sm">Contract formed the a province of Quebec</a></li>
+		 <li>	 <a href="factors-psb.html" class="active" aria-current="page">Determine if the worker is an incorporated employee</a></li>
+		    
+        </ul>
+      </li>
+
+
+
+ 
 
 <li><a href="after.html" class="hidden-xs hidden-sm">Understand the tax obligations</a>
       <a href="after.html#gc-document-nav" class="visible-xs visible-sm">Understand the tax obligations </a></li>
