new pages added

--- a/subway/fire/3a.html
+++ b/subway/fire/3a.html
@@ -93,7 +93,7 @@
                </li>
                <li>
                   <h2  class="bg-danger">[heading here]</h2>
-                  <table class="table table-striped small table-bordered ">
+                  <table id ="ajax-specifications" class="table table-striped small table-bordered ">
                      <caption>Electronic filing options by return type</caption>
                      <tr>
                         <th scope="col">Type    of return</th>
