minor word edit

--- a/subway/fire/3a.html
+++ b/subway/fire/3a.html
@@ -113,9 +113,9 @@
                            </ul>
                         </th>
                         <td><span class="fas fa-check text-success"></span> Yes</td>
-                        <td class="text-muted">Not applicable</td>
-                        <td class="text-muted">Not applicable</td>
-                        <td class="text-muted">Not applicable</td>
+                        <td class="text-muted">Not available</td>
+                        <td class="text-muted">Not available</td>
+                        <td class="text-muted">Not available</td>
                      </tr>
                      <tr>
                         <th scope="row">
@@ -158,9 +158,9 @@
                            </ul>
                            </td>
                         <td><span class="fas fa-check text-success"></span> Yes</td>
-                        <td class="text-muted">Not applicable</td>
+                        <td class="text-muted">Not available</td>
                         <td><span class="fas fa-check text-success"></span> Yes</td>
-                        <td class="text-muted">Not applicable</td>
+                        <td class="text-muted">Not available</td>
                      </tr>
                      <tr>
                         <th scope="row">
@@ -173,9 +173,9 @@
                            </ul>
                            </td>
                         <td><span class="fas fa-check text-success"></span> Yes</td>
-                        <td class="text-muted">Not applicable</td>
+                        <td class="text-muted">Not available</td>
                         <td><span class="fas fa-check text-success"></span> Yes</td>
-                        <td class="text-muted">Not applicable</td>
+                        <td class="text-muted">Not available</td>
                      </tr>
                      <tr>
                         <th scope="row">
@@ -188,9 +188,9 @@
                            </ul>
                            </td>
                         <td><span class="fas fa-check text-success"></span> Yes</td>
-                        <td class="text-muted">Not applicable</td>
+                        <td class="text-muted">Not available</td>
                         <td><span class="fas fa-check text-success"></span> Yes</td>
-                        <td class="text-muted">Not applicable</td>
+                        <td class="text-muted">Not available</td>
                      </tr>
                      <tr>
                         <th scope="row">
@@ -203,9 +203,9 @@
                            </ul>
                            </td>
                         <td><span class="fas fa-check text-success"></span> Yes</td>
-                        <td class="text-muted">Not applicable</td>
+                        <td class="text-muted">Not available</td>
                         <td><span class="fas fa-check text-success"></span> Yes</td>
-                        <td class="text-muted">Not applicable</td>
+                        <td class="text-muted">Not available</td>
                      </tr>
                      <tr>
                         <th scope="row">
@@ -218,9 +218,9 @@
                            </ul>
                            </td>
                         <td><span class="fas fa-check text-success"></span> Yes</td>
-                        <td class="text-muted">Not applicable</td>
+                        <td class="text-muted">Not available</td>
                         <td><span class="fas fa-check text-success"></span> Yes</td>
-                        <td class="text-muted">Not applicable</td>
+                        <td class="text-muted">Not available</td>
                      </tr>
                      <tr>
                         <th scope="row">
@@ -383,9 +383,9 @@
                            </ul>
                         </th>
                         <td><span class="fas fa-check text-success"></span> Yes</td>
-                        <td class="text-muted">Not applicable</td>
+                        <td class="text-muted">Not available</td>
                         <td><span class="fas fa-check text-success"></span> Yes</td>
-                        <td class="text-muted">Not applicable</td>
+                        <td class="text-muted">Not available</td>
                      </tr>
                      <tr>
                         <th scope="row">
@@ -398,9 +398,9 @@
                            </ul>
                         </th>
                         <td><span class="fas fa-check text-success"></span> Yes</td>
-                        <td class="text-muted">Not applicable</td>
+                        <td class="text-muted">Not available</td>
                         <td><span class="fas fa-check text-success"></span> Yes</td>
-                        <td class="text-muted">Not applicable</td>
+                        <td class="text-muted">Not available</td>
                      </tr>
                      <tr>
                         <th scope="row">
@@ -428,9 +428,9 @@
                            </ul>
                         </th>
                         <td><span class="fas fa-check text-success"></span> Yes</td>
-                        <td class="text-muted">Not applicable</td>
-                        <td class="text-muted">Not applicable</td>
-                        <td class="text-muted">Not applicable</td>
+                        <td class="text-muted">Not available</td>
+                        <td class="text-muted">Not available</td>
+                        <td class="text-muted">Not available</td>
                      </tr>
                      <tr>
                         <th scope="row">
@@ -458,9 +458,9 @@
                            </ul>
                         </th>
                         <td><span class="fas fa-check text-success"></span> Yes</td>
-                        <td class="text-muted">Not applicable</td>
+                        <td class="text-muted">Not available</td>
                         <td><span class="fas fa-check text-success"></span> Yes</td>
-                        <td class="text-muted">Not applicable</td>
+                        <td class="text-muted">Not available</td>
                      </tr>
                      <tr>
                         <th scope="row">
@@ -488,9 +488,9 @@
                            </ul>
                         </th>
                         <td><span class="fas fa-check text-success"></span> Yes</td>
-                        <td class="text-muted">Not applicable</td>
+                        <td class="text-muted">Not available</td>
                         <td><span class="fas fa-check text-success"></span> Yes</td>
-                        <td class="text-muted">Not applicable</td>
+                        <td class="text-muted">Not available</td>
                      </tr>
                      <tr>
                         <th scope="row">
@@ -503,9 +503,9 @@
                            </ul>
                         </th>
                         <td><span class="fas fa-check text-success"></span> Yes</td>
-                        <td class="text-muted">Not applicable</td>
+                        <td class="text-muted">Not available</td>
                         <td><span class="fas fa-check text-success"></span> Yes</td>
-                        <td class="text-muted">Not applicable</td>
+                        <td class="text-muted">Not available</td>
                      </tr>
                      <tr>
                         <th scope="row">
@@ -533,9 +533,9 @@
                            </ul>
                         </th>
                         <td><span class="fas fa-check text-success"></span> Yes</td>
-                        <td class="text-muted">Not applicable</td>
+                        <td class="text-muted">Not available</td>
                         <td><span class="fas fa-check text-success"></span> Yes</td>
-                        <td class="text-muted">Not applicable</td>
+                        <td class="text-muted">Not available</td>
                      </tr>
                      <tr>
                         <th scope="row">
@@ -563,9 +563,9 @@
                            </ul>
                         </th>
                         <td><span class="fas fa-check text-success"></span> Yes</td>
-                        <td class="text-muted">Not applicable</td>
+                        <td class="text-muted">Not available</td>
                         <td><span class="fas fa-check text-success"></span> Yes</td>
-                        <td class="text-muted">Not applicable</td>
+                        <td class="text-muted">Not available</td>
                      </tr>
                      <tr>
                         <th scope="row">
@@ -608,9 +608,9 @@
                            </ul>
                         </th>
                         <td><span class="fas fa-check text-success"></span> Yes</td>
-                        <td class="text-muted">Not applicable</td>
+                        <td class="text-muted">Not available</td>
                         <td><span class="fas fa-check text-success"></span> Yes</td>
-                        <td class="text-muted">Not applicable</td>
+                        <td class="text-muted">Not available</td>
                      </tr>
                      <tr>
                         <th scope="row">
