--- a/subway/fire/index.html
+++ b/subway/fire/index.html
@@ -100,7 +100,7 @@
            <aside>
 	   <h2 class="h3">Related</h2>
 	   <ul>
-	     <li><a href="specifications.html">XML specifications for electronic filing of tax returns</a></li>
+	     <li><a href="specifications.html">XML specifications for all information return types</a></li>
 	   </ul>
 	</aside>
             <div id="def-preFooter"></div>
