--- a/subway/fire/specifications.html
+++ b/subway/fire/specifications.html
@@ -8,7 +8,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>File information returns electronically (tax slips and tax summaries) - Canada.ca</title>
+         <title>XML specifications for all information return types - File information returns electronically (tax slips and tax summaries) - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -60,7 +60,7 @@
          <main role="main" property="mainContentOfPage" class="container">
        
              
-               <h1 class="gc-thickline mrgn-tp-0">XML specifications for electronic filing of tax returns</h1>
+               <h1 class="gc-thickline mrgn-tp-0">XML specifications for all information return types</h1>
 			       <p class="pull-left small"> <strong>You may be looking for:</strong></p>
 <ul class="pull-left mrgn-lft-md list-unstyled small mrgn-bttm-lg">
 <li><a href="3.html">Get ready to file information returns electronically</a></li>
