--- a/payroll/guidance/after.html
+++ b/payroll/guidance/after.html
@@ -68,8 +68,8 @@
       <a href="overview.html#gc-document-nav" class="visible-xs visible-sm">Get ready to determine the employment status</a></li>
      
 
-<li><a href="factors.html" class="hidden-xs hidden-sm">Determine the employment status</a>
-      <a href="factors.html#gc-document-nav" class="visible-xs visible-sm">Determine the employment status</a></li>
+<li><a href="factors.html" class="hidden-xs hidden-sm">How to determine the employment status</a>
+      <a href="factors.html#gc-document-nav" class="visible-xs visible-sm">How to determine the employment status</a></li>
 
 
       
