--- a/payroll/guidance/court-filter.html
+++ b/payroll/guidance/court-filter.html
@@ -68,7 +68,7 @@
   </div>
 <p class="pull-left small"> <strong>You may be looking for:</strong></p>
 <ul class="pull-left mrgn-lft-md list-unstyled small mrgn-bttm-lg">
-  <li><a href="factors.html">Determine the employment status</a></li>
+  <li><a href="factors.html">How to determine the employment status</a></li>
 </ul>
 <div class="clearfix"></div>
 <div id="court">
