--- a/payroll/guidance/court-table.html
+++ b/payroll/guidance/court-table.html
@@ -53,7 +53,7 @@
                 href: "index.html"
              
                 },{
-                title: "Determine the employment status",
+                title: "How to determine the employment status",
                 href: "https://test.canada.ca/cra-arc/payroll/guidance/factors.html"
               }
               ],
@@ -71,7 +71,7 @@
  <li><a href="overview.html" class="hidden-xs hidden-sm">Get ready to determine the employment status</a>
       <a href="overview.html#gc-document-nav" class="visible-xs visible-sm">Get ready to determine the employment status</a></li>
   
- <li><a href="factors.html" class="hidden-xs hidden-sm">Determine the employment status</a> <a href="factors.html#gc-document-nav" class="visible-xs visible-sm">Determine the employment status</a>
+ <li><a href="factors.html" class="hidden-xs hidden-sm">How to determine the employment status</a> <a href="factors.html#gc-document-nav" class="visible-xs visible-sm">How to determine the employment status</a>
         <ul class="noline">
           <li><a href="factors-federal.html" class="hidden-xs hidden-sm">Contract formed in a province or territory not in Quebec</a> <a href="factors-federal.html#gc-document-nav" class="visible-xs visible-sm">Contract formed in a province or territory not in Quebec</a></li>
           <li><a href="factors-quebec.html" class="hidden-xs hidden-sm">Contract formed in the province of Quebec</a> <a href="factors-quebec.html#gc-document-nav" class="visible-xs visible-sm">Contract formed the a province of Quebec</a></li>
