--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -51,7 +51,7 @@
                 title: "Determine the employment status: Employee, self-employed or incorporated employee",
                 href: "https://test.canada.ca/cra-arc/payroll/guidance/index.html"
               },{
-                title: "Determine the employment status",
+                title: "How to determine the employment status",
                 href: "https://test.canada.ca/cra-arc/payroll/guidance/factors.html"
               }
                            ],
@@ -66,7 +66,7 @@
 
    <ul>
       <li><a href="overview.html" class="hidden-xs hidden-sm">Get ready to determine the employment status</a> <a href="overview.html#gc-document-nav" class="visible-xs visible-sm">Get ready to determine the employment status</a></li>
-      <li><a href="factors.html" class="hidden-xs hidden-sm">Determine the employment status</a> <a href="factors.html#gc-document-nav" class="visible-xs visible-sm">Determine the employment status</a>
+      <li><a href="factors.html" class="hidden-xs hidden-sm">How to determine the employment status</a> <a href="factors.html#gc-document-nav" class="visible-xs visible-sm">How to determine the employment status</a>
         <ul class="noline">
           <li> <a href="factors-federal.html" class="active" aria-current="page">Contract formed in a province or territory not in Quebec</a></li>
 
@@ -2047,7 +2047,7 @@
   <nav class="gc-subway-pagination">
 		<h2 class="wb-inv">Document navigation</h2>
 		<ul class="pager">
-			<li class="previous"><a href="factors.html" rel="prev"><span class="wb-inv">Previous: </span>Determine the employment status</a></li>
+			<li class="previous"><a href="factors.html" rel="prev"><span class="wb-inv">Previous: </span>How to determine the employment status</a></li>
 		</ul>
 	</nav>
   <div id="def-preFooter"></div>
