--- a/payroll/guidance/index.html
+++ b/payroll/guidance/index.html
@@ -77,7 +77,7 @@
   <dt>   <a href="overview.html">Get ready to determine the employment status</a>  </dt>
   <dd>Information on the type of employment status for tax purposes, what is considered a valid contract, including what to do if you are not sure about the worker classification </dd>
 
-  <dt>    <a href="factors.html">Determine the employment status</a>  </dt>
+  <dt>    <a href="factors.html">How to determine the employment status</a>  </dt>
   <dd>Information on the factors to consider depending on where the contract was formed. The factors are different if the contract is formed in the province of Quebec or in any other province or territory (unless the contract states differently).  </dd>
 
 
