--- a/payroll/guidance/overview.html
+++ b/payroll/guidance/overview.html
@@ -72,8 +72,8 @@
  <li>	 <a href="overview.html" class="active" aria-current="page">Get ready to determine the employment status</a>	</li>
      
 
-<li><a href="factors.html" class="hidden-xs hidden-sm">Determine the employment status</a>
-      <a href="factors.html#gc-document-nav" class="visible-xs visible-sm">Determine the employment status</a></li>
+<li><a href="factors.html" class="hidden-xs hidden-sm">How to determine the employment status</a>
+      <a href="factors.html#gc-document-nav" class="visible-xs visible-sm">How to determine the employment status</a></li>
 
 
       
@@ -271,7 +271,7 @@
 <nav class="mrgn-bttm-lg mrgn-tp-lg">
   <h3 class="wb-inv">Document navigation</h3>
   <ul class="pager">
-    <li class="next"><a href="factors.html" rel="next"><span class="wb-inv">Next: </span>Determine the employment status</a></li>
+    <li class="next"><a href="factors.html" rel="next"><span class="wb-inv">Next: </span>How to determine the employment status</a></li>
   </ul>
 </nav>
 
