--- a/payroll/guidance/factors.html
+++ b/payroll/guidance/factors.html
@@ -8,7 +8,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>Determine the employment status: Employee, self-employed or incorporated employee - Determine the employment status - Canada.ca</title>
+         <title>How to determine the employment status: Employee, self-employed or incorporated employee - Determine the employment status - Canada.ca</title>
      <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -69,7 +69,7 @@
  <li><a href="overview.html" class="hidden-xs hidden-sm">Get ready to determine the employment status</a>
       <a href="overview.html#gc-document-nav" class="visible-xs visible-sm">Get ready to determine the employment status</a></li>
 
- <li>	 <a href="factors.html" class="active" aria-current="page">Determine the employment status</a>	
+ <li>	 <a href="factors.html" class="active" aria-current="page">How to determine the employment status</a>	
 
 
  </li>
@@ -87,11 +87,12 @@
 </nav>
 
 
-<h1 property="name" id="wb-cont" class="gc-thickline">Determine the employment status</h1>
+<h1 property="name" id="wb-cont" class="gc-thickline">How to determine the employment status</h1>
  
 <div class="alert alert-info">
 <p>Content has been updated for <strong>clarity, completeness and plain language</strong>, including <strong>additional examples and legislative references</strong>.</p>
 </div>
+<h2>Steps</h2>
 <ol class="lst-stps">
 <li><h3>Determine if the worked is and employee or self-employed</h3>
 <p>You need to consider multiple factors to determine if the worker is an employee or is self-employed.  </p>
