--- a/payroll/guidance/tax-obligations-self.html
+++ b/payroll/guidance/tax-obligations-self.html
@@ -66,12 +66,12 @@
   <h1 id="gc-document-nav">Determine the employment status: Employee, self-employed or incorporated employee</h1>
   <ul>
 
-<li><a href="overview.html" class="hidden-xs hidden-sm">Overview</a>
-      <a href="overview.html#gc-document-nav" class="visible-xs visible-sm">Overview</a></li>
+<li><a href="overview.html" class="hidden-xs hidden-sm">Determine the employment status: Employee, self-employed or incorporated employee</a>
+      <a href="overview.html#gc-document-nav" class="visible-xs visible-sm">Determine the employment status: Employee, self-employed or incorporated employee</a></li>
      
 
-<li><a href="factors.html" class="hidden-xs hidden-sm">Determine the employment status</a>
-      <a href="factors.html#gc-document-nav" class="visible-xs visible-sm">Determine the employment status</a></li>
+<li><a href="factors.html" class="hidden-xs hidden-sm">How to determine the employment status</a>
+      <a href="factors.html#gc-document-nav" class="visible-xs visible-sm">How to determine the employment status</a></li>
 
 
       
@@ -106,7 +106,7 @@
 
 <div data-ajax-replace="/cra-arc/payroll/guidance/after.html#ajax-info1"></div>
 
-<p><i class="fas fa-user-tag fa-2xl text-primary"></i> If you are not sure if the worker is self-employed, continue to: <a href="factors.html">Determine the employment status</a></p>
+<p><i class="fas fa-user-tag fa-2xl text-primary"></i> If you are not sure if the worker is self-employed, continue to: <a href="factors.html">How to determine the employment status</a></p>
 
 <p>Understanding the tax obligations based on the individual:</p>
 <ul>
