--- a/payroll/guidance/tax-obligations-employee.html
+++ b/payroll/guidance/tax-obligations-employee.html
@@ -109,7 +109,7 @@
 <p><i class="fas fa-user-tag fa-2xl text-primary"></i> If you are not sure if the worker is an employee, continue to: <a href="factors.html">How to determine the employment status</a></p>
 
 <p>Understanding the tax obligations based on the individual:</p>
-<ul>
+<ul class="hidden-xs hidden-sm">
 <li><a href="#tab2" class="wb-tabs-ext">Employer</a> </li>
 <li><a href="#tab1" class="wb-tabs-ext">Employee</a> </li>
 </ul>   
@@ -117,7 +117,7 @@
  <div class="wb-tabs">
                <div class="tabpanels">
    
- <details id="tab2"><summary>Employer</summary>
+ <details id="tab2" class="provisional wb-details-close" open><summary>Employer</summary>
 <p>Understanding the employer's tax obligations:</p>
 <ul>
 <li><a href="#2A">Payroll obligations</a> </li>
