--- a/payroll/guidance/factors.html
+++ b/payroll/guidance/factors.html
@@ -94,7 +94,7 @@
 </div>
 <h2>Steps</h2>
 <ol class="lst-stps">
-<li><h3>Determine if the worked is and employee or self-employed</h3>
+<li><h3>Determine if the worker is an employee or self-employed</h3>
 <p>You need to consider multiple factors to determine if the worker is an employee or is self-employed.  </p>
 
  <p>Unless the <a href="#ajax-contract" aria-controls="ajax-contract" class="overlay-lnk" role="button">valid contract <span class="far fa-question-circle"></span></a> states differently, the factors are different if the contract is formed:</p>
