--- a/payroll/calculate/benefit/loans.html
+++ b/payroll/calculate/benefit/loans.html
@@ -14,15 +14,14 @@
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
          <!-- Meta data-->
-         <!-- Load closure template scripts -->
-         
-         <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_43/cdts/compiled/soyutils.js"></script>
-         <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_43/cdts/compiled/wet-en.js"></script>
+        <!-- Load closure template scripts --> 
+ <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_1_0/cdts/compiled/soyutils.js"></script>
+         <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_1_0/cdts/compiled/wet-en.js"></script>
          <link href="https://test.canada.ca/covid-19-guidance/proto/css/alpha-beta-banner.css" rel="stylesheet">
-         
-		 <link href="https://www.canada.ca/etc/designs/canada/wet-boew/m%C3%A9li-m%C3%A9lo/2023-10-mount-revelstoke.min.css" rel="stylesheet">
-		     <link href="https://cra-arc.gc.ca/wet-boew/css/custom/noline-css.css" rel="stylesheet">
-         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha256-mUZM63G8m73Mcidfrv5E+Y61y7a12O5mW4ezU3bxqW4=" crossorigin="anonymous"/>
+         <link href="https://www.canada.ca/etc/designs/canada/wet-boew/m%C3%A9li-m%C3%A9lo/2023-10-mount-revelstoke.min.css" rel="stylesheet">
+		 <link href="https://www.canada.ca/etc/designs/canada/wet-boew/css/theme.min.css" rel="stylesheet">
+         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha256-mUZM63G8m73Mcidfrv5E+Y61y7a12O5mW4ezU3bxqW4=" crossorigin="anonymous">
+
          <!-- Write closure template -->
          <script type="text/javascript">
             document.write(wet.builder.refTop({
@@ -295,7 +294,7 @@
 </li>
 </ul>
 <h2 id="h_0">Steps</h2>
-<ol class="lst-stps stps-strpd">
+ <ol class="lst-stps ld-zr stps-strpd">
   <li>  
 <h3 id="h_0">Determine if the benefit was received from the loan or debt</h3>
 <p>You need to determine if the benefit was received from the loan or debt. </p>
