--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -14,16 +14,15 @@
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
          <!-- Meta data-->
-         <!-- Load closure template scripts -->
-         
-         <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_43/cdts/compiled/soyutils.js"></script>
-         <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_43/cdts/compiled/wet-en.js"></script>
+              <!-- Load closure template scripts --> 
+ <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_1_0/cdts/compiled/soyutils.js"></script>
+         <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_1_0/cdts/compiled/wet-en.js"></script>
          <link href="https://test.canada.ca/covid-19-guidance/proto/css/alpha-beta-banner.css" rel="stylesheet">
-         
-		 <link href="https://www.canada.ca/etc/designs/canada/wet-boew/m%C3%A9li-m%C3%A9lo/2023-10-mount-revelstoke.min.css" rel="stylesheet">
-		     <link href="https://cra-arc.gc.ca/wet-boew/css/custom/noline-css.css" rel="stylesheet">
-         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha256-mUZM63G8m73Mcidfrv5E+Y61y7a12O5mW4ezU3bxqW4=" crossorigin="anonymous"/>
-         <!-- Write closure template -->
+         <link href="https://www.canada.ca/etc/designs/canada/wet-boew/m%C3%A9li-m%C3%A9lo/2023-10-mount-revelstoke.min.css" rel="stylesheet">
+		 <link href="https://www.canada.ca/etc/designs/canada/wet-boew/css/theme.min.css" rel="stylesheet">
+         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha256-mUZM63G8m73Mcidfrv5E+Y61y7a12O5mW4ezU3bxqW4=" crossorigin="anonymous">
+
+  <!-- Write closure template -->
          <script type="text/javascript">
             document.write(wet.builder.refTop({
             }));
@@ -301,7 +300,7 @@
 </ul>
 	 
 <h2 id="stps">Steps</h2>
-<ol class="lst-stps stps-strpd">
+ <ol class="lst-stps ld-zr stps-strpd">
 <li><h3 id="step1">Determine if the vehicle is an automobile</h3>
 <p>The Income Tax Act defines <strong>automobiles</strong> and <strong>motor vehicles</strong> differently for tax purposes.</p>
   <p>Answer a few questions to determine if the vehicle is an automobile or a motor vehicle.</p>
@@ -522,7 +521,8 @@
 <li><h3 id="step9">Determine if the number of kilometres of personal driving is within the limit for the reduced standby charge</h3> 
 <p><strong>To meet condition 4 of 4 for the reduced standby charge</strong>, use the following to calculate the personal-use quotient. The number of kilometres travelled of personal driving must be less than 1,667 km per 30 day period or 20,004 km in the year.</p>
 
-<ol class="lst-stps-sub stps-strpd">
+ <ol class="lst-stps-sub ld-zr stps-strpd">
+
 <li><details><summary>Determine the actual number of kilometres travelled for personal driving</summary> 
 <p id="step9a">Based on the <a href="#records" aria-controls="centred-popup" class="wb-lbx" role="button">required information (logbook)&nbsp;<span class="far fa-question-circle"></span></a> you received from your employee, determine the actual number of kilometres travelled for personal driving.</p>
 <p> If <strong>no record</strong> is kept, the employee <strong>does not</strong> benefit from the reduction to the standby charge. </p>
