--- a/payroll/calculate/how/tax.html
+++ b/payroll/calculate/how/tax.html
@@ -156,7 +156,7 @@
                     
                      <h3>Steps</h3>
 
-<ol class="lst-stps stps-strpd">
+<ol class="lst-stps ld-zr stps-strpd">
         <li><h4>Determine if you can use income tax tables</h4>
                            <p>Income tax tables can be used in most common situations.</p>
                           
@@ -3310,7 +3310,7 @@
 <p class="mrgn-tp-md">In addition to regular types of payments, you must deduct income tax from lump-sum payments. </p>
 
  <h3 class="mrgn-tp-md">Steps</h3>
-<ol class="lst-stps stps-strpd">
+<ol class="lst-stps ld-zr stps-strpd">
 <li> <h3 class="h4">Determine if the payment is a qualifying retroactive lump-sum payment</h3>
 <p>You need to determine if the payment is a qualifying retroactive lump-sum payment. Learn more: <a href="/cra-arc/payroll/calculate/payment/lump-sum-qua.html">Qualifying retroactive lump-sum payments</a></p>
 <hr>
